--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 1
+      - name: Test files
         run: |
           ouptut=$(docker run -it --rm --name haproxy-syntax-check -v ${path}:/usr/local/etc/haproxy haproxy haproxy -c -f /usr/local/etc/haproxy/haproxy.cfg)
           echo $output | grep "Configuration file is valid" || /bin/false
