--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Test files
         run: |
           ouptut=$(docker run -it --rm --name haproxy-syntax-check -v $(pwd):/usr/local/etc/haproxy haproxy haproxy -c -f /usr/local/etc/haproxy/haproxy.cfg)
-          echo $output | grep "Configuration file is valid" || /bin/false
+          echo $output | grep "Configuration file is valid" || exit 1
 
   deploy:
     name: Apply changes to the server
