--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -20,28 +20,30 @@ defaults
 
 listen Statistics
     log global
-    bind 0.0.0.0:81
+    bind 0.0.0.0:1222
     mode http
     timeout connect 5000
     timeout client 10000
     timeout server 10000
     timeout queue 10000
     option httplog
+
     maxconn 10
 
     stats enable
     stats hide-version
     stats refresh 30000
     stats show-node
-    stats auth ${USERNAME}:${PASSWORD}
+    stats auth $USERNAME:$PASSWORD
     stats uri /stats
 
 
 frontend www
     log global
-    bind 0.0.0.0:1222
+    bind 0.0.0.0:80
     mode http
     timeout client 30000
+    timeout server 30000
     timeout client-fin 30000
     option httplog
     option dontlognull
@@ -79,12 +81,12 @@ backend site
     option httpchk HEAD /
     option forwardfor
     option httpclose
-    http-response del-header ^Server:\
 
     acl valid_method method GET
     http-request deny if !valid_method
 
-    
+    http-response del-header ^Server:\
+
 backend kanban
     log global
     mode http
