--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -63,9 +63,11 @@ frontend www
 
     acl host_site hdr_beg(host) -i www.
     acl host_kanban hdr_beg(host) -i kanban.
+    acl host_count hdr_beg(host) -i count.
 
     use_backend site if host_site
     use_backend kanban if host_kanban
+    use_backend count if host_count
 
     default_backend site
 
@@ -86,6 +88,25 @@ backend site
     http-request deny if !valid_method
 
     http-response del-header ^Server:\
+
+
+backend count
+    log global
+    mode http
+    balance roundrobin
+    server back localhost:5003 check maxconn 1000
+    fullconn 50
+    retries 3
+
+    option httpchk HEAD /
+    option forwardfor
+    option httpclose
+
+    acl valid_method method GET
+    http-request deny if !valid_method
+
+    http-response del-header ^Server:\
+
 
 backend kanban
     log global
