change httpchk for count

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -98,7 +98,7 @@ backend count
     fullconn 50
     retries 3
 
-    option httpchk HEAD /
+    option httpchk HEAD /health
     option forwardfor
     option httpclose
 
