Create https frontend

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -38,12 +38,49 @@ listen Statistics
     stats uri /stats
 
 
-frontend www
+frontend www_https
+    log global
+    bind 0.0.0.0:443 ssl crt /etc/haproxy/certs/kamuridesu.tech.pem
+    http-request add-header X-Forwarded-Proto https
+    http-request set-header X-SSL %[ssl_fc]
+    mode http
+    timeout client 30000
+    timeout client-fin 30000
+    option httplog
+    option dontlognull
+    option httpclose
+    maxconn 1000
+
+    acl forbidden_src src 0.0.0.0/7 244.0.0.0/3
+    acl forbidden_src src_port 0:1023
+    http-request deny if forbidden_src
+
+    acl forbidden_uris url_reg -i .*(\.|%2e)(\.|%2e)(%2f|%5c|/|\\\\)
+    acl forbidden_uris url_sub -i %00 <script xmlrpc.php
+    acl forbidden_uris path_end -i /root.exe /cmd.exe /default.ida /awstats.pl .asp .dll
+    acl forbidden_uris path_dir -i chat main.php read_dump.php viewtopic.php phpbb sumthin horde _vti_bin MSOffice
+    acl forbidden_uris url_reg -i (\.php\?temppath=|\.php\?setmodules=|[=:]http://)
+    http-request deny if forbidden_uris
+
+    acl letsencrypt-acl path_beg /.well-known/acme-challenge/
+
+    acl host_site hdr_beg(host) -i www.
+    acl host_kanban hdr_beg(host) -i kanban.
+    acl host_count hdr_beg(host) -i count.
+
+    use_backend letsencrypt-backend if letsencrypt-acl
+    use_backend site if host_site
+    use_backend kanban if host_kanban
+    use_backend count if host_count
+
+    default_backend site
+
+
+frontend www_http
     log global
     bind 0.0.0.0:80
     mode http
     timeout client 30000
-    timeout server 30000
     timeout client-fin 30000
     option httplog
     option dontlognull
@@ -70,6 +107,10 @@ frontend www
     use_backend count if host_count
 
     default_backend site
+
+
+backend letsencrypt-backend
+    server letsencrypt 127.0.0.1:54321c
 
 
 backend site
