Redirect kanban to port 443 on container

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -70,11 +70,10 @@ frontend www_https
 
     use_backend letsencrypt-backend if letsencrypt-acl
     use_backend site if host_site
-    use_backend kanban if host_kanban
+    use_backend kanban_https if host_kanban
     use_backend count if host_count
 
     default_backend site
-
 
 frontend www_http
     log global
@@ -103,7 +102,7 @@ frontend www_http
     acl host_count hdr_beg(host) -i count.
 
     use_backend site if host_site
-    use_backend kanban if host_kanban
+    use_backend kanban_http if host_kanban
     use_backend count if host_count
 
     default_backend site
@@ -112,6 +111,33 @@ frontend www_http
 backend letsencrypt-backend
     server letsencrypt 127.0.0.1:54321c
 
+backend kanban_http
+    log global
+    mode http
+    balance roundrobin
+    server back localhost:5000 check maxconn 1000
+    fullconn 100
+    retries 3
+
+    option httpchk HEAD /
+    option forwardfor
+    option httpclose
+
+    http-response del-header ^Server:\
+
+backend kanban_https
+    log global
+    mode http
+    balance roundrobin
+    server back localhost:5001 check maxconn 1000
+    fullconn 100
+    retries 3
+
+    option httpchk HEAD /
+    option forwardfor
+    option httpclose
+
+    http-response del-header ^Server:\
 
 backend site
     log global
@@ -130,7 +156,6 @@ backend site
 
     http-response del-header ^Server:\
 
-
 backend count
     log global
     mode http
@@ -145,20 +170,5 @@ backend count
 
     acl valid_method method GET
     http-request deny if !valid_method
-
-    http-response del-header ^Server:\
-
-
-backend kanban
-    log global
-    mode http
-    balance roundrobin
-    server back localhost:5000 check maxconn 1000
-    fullconn 100
-    retries 3
-
-    option httpchk HEAD /
-    option forwardfor
-    option httpclose
 
     http-response del-header ^Server:\
