--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -20,7 +20,7 @@ defaults
 
 listen Statistics
     log global
-    bind 0.0.0.0:81
+    bind *:81
     mode http
     timeout connect 5000
     timeout client 10000
@@ -40,7 +40,7 @@ listen Statistics
 
 frontend www_https
     log global
-    bind 0.0.0.0:443 ssl crt /etc/haproxy/certs/kamuridesu.tech.pem
+    bind *:443 ssl crt /etc/haproxy/certs/kamuridesu.tech.pem
     http-request add-header X-Forwarded-Proto https
     http-request set-header X-SSL %[ssl_fc]
     mode http
@@ -77,7 +77,7 @@ frontend www_https
 
 frontend www_http
     log global
-    bind 0.0.0.0:80
+    bind *:80
     mode http
     timeout client 30000
     timeout client-fin 30000
