--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -109,7 +109,7 @@ frontend www_http
 
 
 backend letsencrypt-backend
-    server letsencrypt 127.0.0.1:54321c
+    server letsencrypt 127.0.0.1:54321
 
 backend kanban
     log global
