--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -100,10 +100,12 @@ frontend www_http
     acl host_site hdr_beg(host) -i www.
     acl host_kanban hdr_beg(host) -i kanban.
     acl host_count hdr_beg(host) -i count.
+    acl host_rabbit hdr_beg(hsot) -i rabbit.
 
     use_backend site if host_site
     use_backend kanban if host_kanban
     use_backend count if host_count
+    use_backend rabbit-mgmt if host_rabbit
 
     default_backend site
 
@@ -158,3 +160,17 @@ backend count
     http-request deny if !valid_method
 
     http-response del-header ^Server:\
+    
+backend rabbit-mgmt
+    log global
+    mode http
+    balance roundrobin
+    server back localhost:15672 check maxconn 1000
+    fullconn 50
+    retries 3
+
+    option httpchk HEAD /metrics
+    option forwardfor
+    option httpclose
+
+    http-response del-header ^Server:
