--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -67,11 +67,13 @@ frontend www_https
     acl host_site hdr_beg(host) -i www.
     acl host_kanban hdr_beg(host) -i kanban.
     acl host_count hdr_beg(host) -i count.
+    acl host_rabbit hdr_beg(hsot) -i rabbit.
 
     use_backend letsencrypt-backend if letsencrypt-acl
     use_backend site if host_site
     use_backend kanban if host_kanban
     use_backend count if host_count
+    use_backend rabbit-mgmt if host_rabbit
 
     default_backend site
 
