--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -40,7 +40,7 @@ listen Statistics
 
 frontend www_https
     log global
-    bind *:443 ssl crt /etc/haproxy/certs/kamuridesu.tech.pem
+    bind *:443 ssl crt /etc/ssl/kamuridesu.com/kamuridesu.com.pem
     http-request add-header X-Forwarded-Proto https
     http-request set-header X-SSL %[ssl_fc]
     mode http
@@ -102,7 +102,7 @@ frontend www_http
     acl host_site hdr_beg(host) -i www.
     acl host_kanban hdr_beg(host) -i kanban.
     acl host_count hdr_beg(host) -i count.
-    acl host_rabbit hdr_beg(hsot) -i rabbit.
+    acl host_rabbit hdr_beg(host) -i rabbit.
 
     use_backend site if host_site
     use_backend kanban if host_kanban
@@ -174,4 +174,4 @@ backend rabbit-mgmt
     option forwardfor
     option httpclose
 
-    http-response del-header ^Server:
+    http-response del-header ^Server:\
