--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,11 @@ jobs:
         run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "cd ${{ github.event.repository.name }} && git pull || git clone https://github.com/${{ github.repository }}.git"
       - name: Backup config
         run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "cp /etc/haproxy/haproxy.cfg ./haproxy.cfg.backup"
-      - name: Put files on server
+      - name: Validate configuration
         run: |
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "export USERNAME=${{ secrets.USERNAME }}; export PASSWORD=${{ secrets.PASSWORD }}; cat ${{ github.event.repository.name }}/haproxy.cfg | envsubst > /tmp/haproxy.cfg"
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "echo '' >> /tmp/haproxy.cfg; sudo cp /tmp/haproxy.cfg /etc/haproxy/haproxy.cfg"
+          ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "echo '' >> /tmp/haproxy.cfg; haproxy -c -f /tmp/haproxy.cfg"
+      - name: Update config file
+        run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "echo '' >> /tmp/haproxy.cfg; sudo cp /tmp/haproxy.cfg /etc/haproxy/haproxy.cfg"
       - name: Restart HAProxy
         run: ssh ${{ secrets.SERVER_USER }}@${{ secrets.IP_ADDR }} "sudo /etc/init.d/haproxy restart"
