feat: add deepdanboryu backend

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -103,11 +103,13 @@ frontend www_http
     acl host_kanban hdr_beg(host) -i kanban.
     acl host_count hdr_beg(host) -i count.
     acl host_rabbit hdr_beg(host) -i rabbit.
+    acl host_waifurec hdr_beg(host) -i waifuis.
 
     use_backend site if host_site
     use_backend kanban if host_kanban
     use_backend count if host_count
     use_backend rabbit-mgmt if host_rabbit
+    use_backend deepdanbooryu if host_waifurec 
 
     default_backend site
 
@@ -155,6 +157,23 @@ backend count
     retries 3
 
     option httpchk HEAD /health
+    option forwardfor
+    option httpclose
+
+    acl valid_method method GET
+    http-request deny if !valid_method
+
+    http-response del-header ^Server:\
+
+backend deepdanbooryu
+    log global
+    mode http
+    balance roundrobin
+    server back localhost:5005 check maxconn 1000
+    fullconn 50
+    retries 3
+
+    option httpchk HEAD /
     option forwardfor
     option httpclose
 
