fix: remove GET rule from danbooryu

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -68,12 +68,14 @@ frontend www_https
     acl host_kanban hdr_beg(host) -i kanban.
     acl host_count hdr_beg(host) -i count.
     acl host_rabbit hdr_beg(hsot) -i rabbit.
+    acl host_waifurec hdr_beg(host) -i waifuis.
 
     use_backend letsencrypt-backend if letsencrypt-acl
     use_backend site if host_site
     use_backend kanban if host_kanban
     use_backend count if host_count
     use_backend rabbit-mgmt if host_rabbit
+    use_backend deepdanbooryu if host_waifurec 
 
     default_backend site
 
@@ -176,9 +178,6 @@ backend deepdanbooryu
     option httpchk HEAD /
     option forwardfor
     option httpclose
-
-    acl valid_method method GET
-    http-request deny if !valid_method
 
     http-response del-header ^Server:\
     
