change to new server

--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -40,7 +40,7 @@ listen Statistics
 
 frontend www_https
     log global
-    bind *:443 ssl crt /etc/ssl/kamuridesu.com/kamuridesu.com.pem
+    bind *:443 ssl crt /etc/ssl/com.kamuridesu/com.kamuridesu.pem
     http-request add-header X-Forwarded-Proto https
     http-request set-header X-SSL %[ssl_fc]
     mode http
@@ -79,6 +79,9 @@ frontend www_https
 
     default_backend site
 
+backend letsencrypt-backend
+    server letsencrypt 127.0.0.1:54321
+
 frontend www_http
     log global
     bind *:80
@@ -115,29 +118,11 @@ frontend www_http
 
     default_backend site
 
-
-backend letsencrypt-backend
-    server letsencrypt 127.0.0.1:54321
-
-backend kanban
-    log global
-    mode http
-    balance roundrobin
-    server back localhost:5000 check maxconn 1000
-    fullconn 100
-    retries 3
-
-    option httpchk HEAD /
-    option forwardfor
-    option httpclose
-
-    http-response del-header ^Server:\
-
 backend site
     log global
     mode http
     balance roundrobin
-    server back localhost:5002 check maxconn 1000
+    server back 168.75.87.2:3000 check maxconn 1000
     fullconn 100
     retries 3
 
@@ -150,28 +135,28 @@ backend site
 
     http-response del-header ^Server:\
 
-backend count
-    log global
-    mode http
-    balance roundrobin
-    server back localhost:5003 check maxconn 1000
-    fullconn 50
-    retries 3
+# backend count
+#     log global
+#     mode http
+#     balance roundrobin
+#     server back 168.75.87.2:5003 check maxconn 1000
+#     fullconn 50
+#     retries 3
 
-    option httpchk HEAD /health
-    option forwardfor
-    option httpclose
+#     option httpchk HEAD /health
+#     option forwardfor
+#     option httpclose
 
-    acl valid_method method GET
-    http-request deny if !valid_method
+#     acl valid_method method GET
+#     http-request deny if !valid_method
 
-    http-response del-header ^Server:\
+#     http-response del-header ^Server:\
 
 backend deepdanbooryu
     log global
     mode http
     balance roundrobin
-    server back localhost:5005 check maxconn 1000
+    server back 168.75.87.2:3001 check maxconn 1000
     fullconn 50
     retries 3
 
@@ -181,15 +166,15 @@ backend deepdanbooryu
 
     http-response del-header ^Server:\
     
-backend rabbit-mgmt
-    log global
-    mode http
-    balance roundrobin
-    server back localhost:15672 check maxconn 1000
-    fullconn 50
-    retries 3
+# backend rabbit-mgmt
+#     log global
+#     mode http
+#     balance roundrobin
+#     server back 168.75.87.2:15672 check maxconn 1000
+#     fullconn 50
+#     retries 3
 
-    option forwardfor
-    option httpclose
+#     option forwardfor
+#     option httpclose
 
-    http-response del-header ^Server:\
+#     http-response del-header ^Server:\
