--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -65,16 +65,16 @@ frontend www_https
     acl letsencrypt-acl path_beg /.well-known/acme-challenge/
 
     acl host_site hdr_beg(host) -i www.
-    acl host_kanban hdr_beg(host) -i kanban.
-    acl host_count hdr_beg(host) -i count.
-    acl host_rabbit hdr_beg(hsot) -i rabbit.
+    # acl host_kanban hdr_beg(host) -i kanban.
+    # acl host_count hdr_beg(host) -i count.
+    # acl host_rabbit hdr_beg(hsot) -i rabbit.
     acl host_waifurec hdr_beg(host) -i waifuis.
 
     use_backend letsencrypt-backend if letsencrypt-acl
     use_backend site if host_site
-    use_backend kanban if host_kanban
-    use_backend count if host_count
-    use_backend rabbit-mgmt if host_rabbit
+    # # use_backend kanban if host_kanban
+    # # use_backend count if host_count
+    # # use_backend rabbit-mgmt if host_rabbit
     use_backend deepdanbooryu if host_waifurec 
 
     default_backend site
@@ -105,15 +105,15 @@ frontend www_http
     http-request deny if forbidden_uris
 
     acl host_site hdr_beg(host) -i www.
-    acl host_kanban hdr_beg(host) -i kanban.
-    acl host_count hdr_beg(host) -i count.
-    acl host_rabbit hdr_beg(host) -i rabbit.
+    # # acl host_kanban hdr_beg(host) -i kanban.
+    # # acl host_count hdr_beg(host) -i count.
+    # # acl host_rabbit hdr_beg(host) -i rabbit.
     acl host_waifurec hdr_beg(host) -i waifuis.
 
     use_backend site if host_site
-    use_backend kanban if host_kanban
-    use_backend count if host_count
-    use_backend rabbit-mgmt if host_rabbit
+    # # use_backend kanban if host_kanban
+    # # use_backend count if host_count
+    # # use_backend rabbit-mgmt if host_rabbit
     use_backend deepdanbooryu if host_waifurec 
 
     default_backend site
@@ -135,7 +135,7 @@ backend site
 
     http-response del-header ^Server:\
 
-# backend count
+backend count
 #     log global
 #     mode http
 #     balance roundrobin
@@ -166,7 +166,7 @@ backend deepdanbooryu
 
     http-response del-header ^Server:\
     
-# backend rabbit-mgmt
+backend rabbit-mgmt
 #     log global
 #     mode http
 #     balance roundrobin
