--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -69,7 +69,9 @@ frontend www_https
     # acl host_count hdr_beg(host) -i count.
     # acl host_rabbit hdr_beg(hsot) -i rabbit.
     acl host_waifurec hdr_beg(host) -i waifuis.
+    acl host_invidious hdr_beg(host) -i inv.
 
+    use_backend invidious if host_invidious
     use_backend letsencrypt-backend if letsencrypt-acl
     use_backend site if host_site
     # # use_backend kanban if host_kanban
@@ -109,7 +111,9 @@ frontend www_http
     # # acl host_count hdr_beg(host) -i count.
     # # acl host_rabbit hdr_beg(host) -i rabbit.
     acl host_waifurec hdr_beg(host) -i waifuis.
+    acl host_invidious hdr_beg(host) -i inv.
 
+    use_backend invidious if host_invidious
     use_backend site if host_site
     # # use_backend kanban if host_kanban
     # # use_backend count if host_count
@@ -157,6 +161,20 @@ backend deepdanbooryu
     mode http
     balance roundrobin
     server back 168.75.87.2:3001 check maxconn 1000
+    fullconn 50
+    retries 3
+
+    option httpchk HEAD /
+    option forwardfor
+    option httpclose
+
+    http-response del-header ^Server:\
+
+backend invidious
+    log global
+    mode http
+    balance roundrobin
+    server back 168.75.87.2:3002 check maxconn 1000
     fullconn 50
     retries 3
 
