--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -66,7 +66,7 @@ frontend www_https
 
     acl host_site hdr_beg(host) -i www.
     # acl host_kanban hdr_beg(host) -i kanban.
-    # acl host_count hdr_beg(host) -i count.
+    acl host_count hdr_beg(host) -i count.
     # acl host_rabbit hdr_beg(hsot) -i rabbit.
     acl host_waifurec hdr_beg(host) -i waifuis.
     acl host_invidious hdr_beg(host) -i inv.
@@ -75,7 +75,7 @@ frontend www_https
     use_backend letsencrypt-backend if letsencrypt-acl
     use_backend site if host_site
     # # use_backend kanban if host_kanban
-    # # use_backend count if host_count
+    use_backend count if host_count
     # # use_backend rabbit-mgmt if host_rabbit
     use_backend deepdanbooryu if host_waifurec 
 
@@ -108,7 +108,7 @@ frontend www_http
 
     acl host_site hdr_beg(host) -i www.
     # # acl host_kanban hdr_beg(host) -i kanban.
-    # # acl host_count hdr_beg(host) -i count.
+    acl host_count hdr_beg(host) -i count.
     # # acl host_rabbit hdr_beg(host) -i rabbit.
     acl host_waifurec hdr_beg(host) -i waifuis.
     acl host_invidious hdr_beg(host) -i inv.
@@ -116,7 +116,7 @@ frontend www_http
     use_backend invidious if host_invidious
     use_backend site if host_site
     # # use_backend kanban if host_kanban
-    # # use_backend count if host_count
+    use_backend count if host_count
     # # use_backend rabbit-mgmt if host_rabbit
     use_backend deepdanbooryu if host_waifurec 
 
@@ -140,21 +140,21 @@ backend site
     http-response del-header ^Server:\
 
 backend count
-#     log global
-#     mode http
-#     balance roundrobin
-#     server back 168.75.87.2:5003 check maxconn 1000
-#     fullconn 50
-#     retries 3
+    log global
+    mode http
+    balance roundrobin
+    server back 168.75.87.2:3003 check maxconn 1000
+    fullconn 50
+    retries 3
 
-#     option httpchk HEAD /health
-#     option forwardfor
-#     option httpclose
+    option httpchk HEAD /health
+    option forwardfor
+    option httpclose
 
-#     acl valid_method method GET
-#     http-request deny if !valid_method
+    acl valid_method method GET
+    http-request deny if !valid_method
 
-#     http-response del-header ^Server:\
+    http-response del-header ^Server:\
 
 backend deepdanbooryu
     log global
@@ -184,7 +184,7 @@ backend invidious
 
     http-response del-header ^Server:\
     
-backend rabbit-mgmt
+# backend rabbit-mgmt
 #     log global
 #     mode http
 #     balance roundrobin
