--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -70,14 +70,16 @@ frontend www_https
     # acl host_rabbit hdr_beg(hsot) -i rabbit.
     acl host_waifurec hdr_beg(host) -i waifuis.
     acl host_invidious hdr_beg(host) -i inv.
+    acl host_trilium hdr_beg(host) -i notes.
 
-    use_backend invidious if host_invidious
     use_backend letsencrypt-backend if letsencrypt-acl
     use_backend site if host_site
     # # use_backend kanban if host_kanban
     use_backend count if host_count
     # # use_backend rabbit-mgmt if host_rabbit
     use_backend deepdanbooryu if host_waifurec 
+    use_backend invidious if host_invidious
+    use_backend trilium if host_trilium
 
     default_backend site
 
@@ -112,13 +114,15 @@ frontend www_http
     # # acl host_rabbit hdr_beg(host) -i rabbit.
     acl host_waifurec hdr_beg(host) -i waifuis.
     acl host_invidious hdr_beg(host) -i inv.
+    acl host_trilium hdr_beg(host) -i notes.
 
-    use_backend invidious if host_invidious
     use_backend site if host_site
     # # use_backend kanban if host_kanban
     use_backend count if host_count
     # # use_backend rabbit-mgmt if host_rabbit
-    use_backend deepdanbooryu if host_waifurec 
+    use_backend deepdanbooryu if host_waifurec
+    use_backend invidious if host_invidious
+    use_backend trilium if host_trilium
 
     default_backend site
 
@@ -126,7 +130,7 @@ backend site
     log global
     mode http
     balance roundrobin
-    server back 168.75.87.2:3000 check maxconn 1000
+    server back $BACKEND_IP_ADDR:3000 check maxconn 1000
     fullconn 100
     retries 3
 
@@ -143,7 +147,7 @@ backend count
     log global
     mode http
     balance roundrobin
-    server back 168.75.87.2:3003 check maxconn 1000
+    server back $BACKEND_IP_ADDR:3003 check maxconn 1000
     fullconn 50
     retries 3
 
@@ -160,7 +164,7 @@ backend deepdanbooryu
     log global
     mode http
     balance roundrobin
-    server back 168.75.87.2:3001 check maxconn 1000
+    server back $BACKEND_IP_ADDR:3001 check maxconn 1000
     fullconn 50
     retries 3
 
@@ -174,7 +178,21 @@ backend invidious
     log global
     mode http
     balance roundrobin
-    server back 168.75.87.2:3002 check maxconn 1000
+    server back $BACKEND_IP_ADDR:3002 check maxconn 1000
+    fullconn 50
+    retries 3
+
+    option httpchk HEAD /
+    option forwardfor
+    option httpclose
+
+    http-response del-header ^Server:\
+
+backend trilium
+    log global
+    mode http
+    balance roundrobin
+    server back $BACKEND_IP_ADDR:3004 check maxconn 1000
     fullconn 50
     retries 3
 
@@ -188,7 +206,7 @@ backend invidious
 #     log global
 #     mode http
 #     balance roundrobin
-#     server back 168.75.87.2:15672 check maxconn 1000
+#     server back $BACKEND_IP_ADDR:15672 check maxconn 1000
 #     fullconn 50
 #     retries 3
 
