--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -151,7 +151,7 @@ backend count
     fullconn 50
     retries 3
 
-    option httpchk HEAD /health
+    option httpchk GET /health
     option forwardfor
     option httpclose
 
