--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -178,7 +178,7 @@ backend invidious
     log global
     mode http
     balance roundrobin
-    server back $BACKEND_IP_ADDR:3002 check maxconn 1000
+    server back 127.0.0.1:3002 check maxconn 1000
     fullconn 50
     retries 3
 
