--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -68,7 +68,6 @@ frontend www_https
     # acl host_kanban hdr_beg(host) -i kanban.
     acl host_count hdr_beg(host) -i count.
     # acl host_rabbit hdr_beg(hsot) -i rabbit.
-    acl host_waifurec hdr_beg(host) -i waifuis.
     acl host_invidious hdr_beg(host) -i inv.
     acl host_trilium hdr_beg(host) -i notes.
 
@@ -77,7 +76,6 @@ frontend www_https
     # # use_backend kanban if host_kanban
     use_backend count if host_count
     # # use_backend rabbit-mgmt if host_rabbit
-    use_backend deepdanbooryu if host_waifurec 
     use_backend invidious if host_invidious
     use_backend trilium if host_trilium
 
@@ -112,7 +110,6 @@ frontend www_http
     # # acl host_kanban hdr_beg(host) -i kanban.
     acl host_count hdr_beg(host) -i count.
     # # acl host_rabbit hdr_beg(host) -i rabbit.
-    acl host_waifurec hdr_beg(host) -i waifuis.
     acl host_invidious hdr_beg(host) -i inv.
     acl host_trilium hdr_beg(host) -i notes.
 
@@ -120,7 +117,6 @@ frontend www_http
     # # use_backend kanban if host_kanban
     use_backend count if host_count
     # # use_backend rabbit-mgmt if host_rabbit
-    use_backend deepdanbooryu if host_waifurec
     use_backend invidious if host_invidious
     use_backend trilium if host_trilium
 
@@ -160,20 +156,6 @@ backend count
 
     http-response del-header ^Server:\
 
-backend deepdanbooryu
-    log global
-    mode http
-    balance roundrobin
-    server back $BACKEND_IP_ADDR:3001 check maxconn 1000
-    fullconn 50
-    retries 3
-
-    option httpchk HEAD /
-    option forwardfor
-    option httpclose
-
-    http-response del-header ^Server:\
-
 backend invidious
     log global
     mode http
@@ -192,7 +174,7 @@ backend trilium
     log global
     mode http
     balance roundrobin
-    server back $BACKEND_IP_ADDR:3004 check maxconn 1000
+    server back 127.0.0.1:3004 check maxconn 1000
     fullconn 50
     retries 3
 
