--- a/haproxy.cfg
+++ b/haproxy.cfg
@@ -143,7 +143,7 @@ backend count
     log global
     mode http
     balance roundrobin
-    server back $BACKEND_IP_ADDR:3003 check maxconn 1000
+    server back 127.0.0.1:3003 check maxconn 1000
     fullconn 50
     retries 3
 
